--- a/templates/actor/crew-sheet.html
+++ b/templates/actor/crew-sheet.html
@@ -13,8 +13,8 @@
         </div>
         <div class="stress-track">
             <h2>Reputation</h2>
-            <p style="text-align: center;">Ambitious - Brutal - Daring - Honourable</p>
-            <p style="text-align: center;">Reckless - Soft - Unstable - Vicious</p>
+            <p style="text-align: center;">{{#inList data.reputation reputationsA}}{{/inList}}</p>
+            <p style="text-align: center;">{{#inList data.reputation reputationsB}}{{/inList}}</p>
         </div>
     </header>
     
