--- a/styles/buried.css
+++ b/styles/buried.css
@@ -463,6 +463,11 @@ padding: 0;
 }
 .add-proj {flex: 1;}
 
+.toggleList.active {
+  font-weight: bolder;
+  color: var(--medblue);
+  text-shadow: 0 0 10px var(--holoblue);
+}
 
 /* span-based clock for stupid reasons */
 
