--- a/styles/buried.css
+++ b/styles/buried.css
@@ -70,6 +70,12 @@ div.section {
     position: relative;
 }
 
+h2.emph {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-bottom: 0.5em;
+  border-bottom: none;
+}
 
 .table-actions input {
     appearance: none;
