--- a/templates/actor/agent-sheet.html
+++ b/templates/actor/agent-sheet.html
@@ -307,7 +307,7 @@
             <p>You may also need to mark harm or stress.</p>
             <h3>Skipped Mission</h3>
             <p>Agents who skipped the mission get to take R &amp; R (rest and relaxation).</p>
-            <button>R &amp; R</button>
+            <button class="r-and-r">R &amp; R</button>
             <p>This marks a healing tick and clears up to 2 stress.</p>
         </div>
         <div class="prose section">
