--- a/templates/actor/role-sheet.html
+++ b/templates/actor/role-sheet.html
@@ -5,24 +5,24 @@
         <h1 style="text-transform:capitalize;">{{data.role}}</h1>
     </header>
     {{#if crew}}
-        <h3>Crew: <a class="entity-link content-link" data-type="Actor" data-entity="Actor" data-id="{{crew.id}}">{{crew.name}}</a></h3>
+        <h3>Crew: <a class="entity-link content-link" data-uuid="Actor.{{crew.id}}" data-type="Actor" data-entity="Actor" data-id="{{crew.id}}">{{crew.name}}</a></h3>
     {{/if}}
 
     {{#if data.role}}
     <section>
-        {{#if (eq data.role "director")}}
+        {{#if (eq system.role "director")}}
         <div class="section">
         <h3>Intel</h3>
             <p>You can store up to 4 intel between missions (any extra must be spent immediately).The first vault upgrade allows you to store 8 intel; the second vault upgrade allows you to store up to 16 intel.</p>
             <p><b>Intel:</b>
                 <span class="xp ib stress">
-                {{#track data.resources.intel.max}}
-                    <input type="radio" name="data.resources.intel.value" value="{{@index}}" {{checked2 data.resources.intel.value @index}}/>
+                {{#track system.resources.intel.max}}
+                    <input type="radio" name="system.resources.intel.value" value="{{@index}}" {{checked2 system.resources.intel.value @index}}/>
                 {{/track}}
                 </span>
             </p>
             <p>
-                <label class="xp-clear ib"><input type="radio" name="data.resources.intel.value" value="0" {{checked2 data.resources.intel.value 0}}/>Clear Intel</label>
+                <label class="xp-clear ib"><input type="radio" name="system.resources.intel.value" value="0" {{checked2 system.resources.intel.value 0}}/>Clear Intel</label>
             </p>
         </div>
         <div class="section">
@@ -30,22 +30,23 @@
             <p>Heat indicates how much attention your activities are attracting. If the track fills up, increase threat by one then clear the heat track.</p>
             <p><b>Heat:</b>
                 <span class="xp ib stress">
-                {{#track data.resources.heat.max}}
-                    <input type="radio" name="data.resources.heat.value" value="{{@index}}" {{checked2 data.resources.heat.value @index}}/>
+                {{#track system.resources.heat.max}}
+                    <input type="radio" name="system.resources.heat.value" value="{{@index}}" {{checked2 system.resources.heat.value @index}}/>
                 {{/track}}
                 </span>
             </p>
             <p>
-                <label class="xp-clear ib"><input type="radio" name="data.resources.heat.value" value="0" {{checked2 data.resources.heat.value 0}}/>Clear Heat</label>
+                <label class="xp-clear ib"><input type="radio" name="system.resources.heat.value" value="0" {{checked2 system.resources.heat.value 0}}/>Clear Heat</label>
             </p>
             <h4>Threat</h4>
             <p>As the threat level increases, the more dangerous and desperate the conspiracy becomes. If the threat level ever reaches 5, the crew is destroyed by the full might of the conspiracy.</p>
             <p><strong>Threat:</strong> 
                 <span class="xp ib stress">
-                {{#track data.resources.threat.max}}
-                    <input type="radio" name="data.resources.threat.value" value="{{@index}}" {{checked2 data.resources.threat.value @index}}/>
+                {{#track system.resources.threat.max}}
+                    <input type="radio" name="system.resources.threat.value" value="{{@index}}" {{checked2 system.resources.threat.value @index}}/>
                 {{/track}}
                 </span>
+                <input style="display: none;" type="radio" name="system.resources.threat.value" value="0" {{checked2 system.resources.threat.value 0}}/>
             </p>
         </div>
         <div class="section">
@@ -62,19 +63,19 @@
             </ul>
         </div>
         {{/if}}
-        {{#if (eq data.role "qm")}}
+        {{#if (eq system.role "qm")}}
         <div class="section">
             <h3>Supply</h3>
             <p>You can keep up to 6 supply on hand.Use it to upgrade the crew, replenish squads, and obtain assets.</p>
             <p><b>Supply:</b>
                 <span class="xp ib stress">
                 {{#track 6}}
-                    <input type="radio" name="data.resources.supply.value" value="{{@index}}" {{checked2 data.resources.supply.value @index}}/>
+                    <input type="radio" name="system.resources.supply.value" value="{{@index}}" {{checked2 system.resources.supply.value @index}}/>
                 {{/track}}
                 </span>
             </p>
             <p>
-                <label class="xp-clear ib"><input type="radio" name="data.resources.supply.value" value="0" {{checked2 data.resources.supply.value 0}}/>Clear Supply</label>
+                <label class="xp-clear ib"><input type="radio" name="system.resources.supply.value" value="0" {{checked2 system.resources.supply.value 0}}/>Clear Supply</label>
             </p>
         </div>
         <div class="section">
@@ -86,7 +87,7 @@
                 <li><h4>Acquire Asset</h4><p>Assign an agent to hire, borrow, or steal an asset your crew requires for an upcoming mission. The roll will determine the quality of the asset obtained.</p>
                     <p><em>This might mean hiring outside expertise, obtaining black-market goods, or gaining legitimate access to classified information.</em></p></li>
                 <li><h4>Upgrade</h4><p>Assign an agent and spend supply to purchase a single upgrade or ability on the crew sheet.</p>
-                    <p><a class="entity-link content-link" data-type="Actor" data-entity="Actor" data-id="{{crew.id}}">{{crew.name}}</a></p></li>
+                    <p><a class="entity-link content-link" data-uuid="Actor.{{crew.id}}" data-type="Actor" data-entity="Actor" data-id="{{crew.id}}">{{crew.name}}</a></p></li>
                 <li><h4>Long-Term Project</h4><p>Assign an agent to lead the project. They will roll an action to advance the project clock.</p>
                     <p><em>Mark segments on the clock according to your result.</em></p> </li>
             </ul>
@@ -97,6 +98,7 @@
             {{#each projects}}
             <div class="project-card">
                 <div class="clock" data-id="{{this.id}}">
+                    <input type="hidden" name="{{this.id}}-progress" value="0" {{checked2 this.progress 0}} />
                     <input type="hidden" class="size" value="{{this.size}}" />
                     {{#track this.size}}
                         <input type="radio" name="{{this.id}}-progress" value="{{@index}}" {{checked2 this.progress @index}}/>
@@ -117,19 +119,19 @@
             </div>
         </div>
         <div>
-        {{editor content=data.description target="data.description" button=true owner=true editable=true}}
+        {{editor descMarkup target="system.description" button=true owner=true editable=true}}
         </div>
         {{/if}}
-        {{#if (eq data.role "counter-intel")}}
+        {{#if (eq system.role "counter-intel")}}
         <div class="section">
             <h3>Manage Counter-Agents</h3>
             <p>You begin with two counter-agents and can only have two at a time working for you until you upgrade your network.</p>
         </div>
         <div>
-        {{editor content=data.description target="data.description" button=true owner=true editable=true}}
+        {{editor descMarkup target="system.description" button=true owner=true editable=true}}
         </div>
         {{/if}}
-        {{#if (eq data.role "analyst")}}
+        {{#if (eq system.role "analyst")}}
         <div class="section">
             <h3>After-Action Reports</h3>
             <p>An after-action report is a record of the mission. It can simply be a list with the names of the agents, the
@@ -143,10 +145,10 @@
                 can request the creation of a handout if they become important.</p>
         </div>
         <div>
-        {{editor content=data.description target="data.description" button=true owner=true editable=true}}
+        {{editor descMarkup target="system.description" button=true owner=true editable=true}}
         </div>
         {{/if}}
-        {{#if (eq data.role "personnel")}}
+        {{#if (eq system.role "personnel")}}
         <div class="section personnel">
             <p>During the mission briefing, assign agents to the primary and secondary missions, and assemble the engagement dice.</p>
             <p>During the debrief, ensure everyone gets their XP.</p>
@@ -161,7 +163,7 @@
             </tr>
             {{#each agents}}
             <tr data-agent="{{this.id}}">
-            <td><a class="entity-link content-link" data-type="Actor" data-entity="Actor" data-id="{{this.id}}">{{this.name}}</a> ({{this.playbook}})
+            <td><a class="entity-link content-link" data-uuid="Actor.{{this.id}}" data-type="Actor" data-entity="Actor" data-id="{{this.id}}">{{this.name}}</a> ({{this.playbook}})
             </td>
             <td style="text-align: center;">{{this.stress}}/8</td>
             <td>{{this.skills}}</td>
@@ -203,7 +205,7 @@
             </tr>
             {{#each squads}}
             <tr data-agent="{{this.id}}">
-            <td><a class="entity-link content-link" data-type="Actor" data-entity="Actor" data-id="{{this.id}}">{{this.name}}</a> ({{this.playbook}})
+            <td><a class="entity-link content-link" data-uuid="Actor.{{this.id}}" data-type="Actor" data-entity="Actor" data-id="{{this.id}}">{{this.name}}</a> ({{this.playbook}})
             </td>
             <td style="text-align: center;">{{this.stress}}/6</td>
             <td>{{this.skills}}</td>
@@ -224,7 +226,7 @@
             </table>
         </div>
         <div>
-        {{editor content=data.description target="data.description" button=true owner=true editable=true}}
+        {{editor descMarkup target="system.description" button=true owner=true editable=true}}
         </div>
         {{/if}}
     </section>
